Fix loading of background image preview

Summary:
50445f794b3142f29dcc043f3af83c549c694bcd changed how wallpapers worked.
Instead of storing an absolute path in the config we move the file and
saves a relative path.

The preview icon still expected an absolute path.

This patch loads the image in the same way SDDM expects.

BUG: 402930
FIXED-IN: 5.15.0

Test Plan:
Set image
Reopened KCM

Reviewers: #plasma, ngraham

Reviewed By: ngraham

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D18614